force-app/main/default/objects/CCR_Localization__c/CCR_Localization__c.object-meta.xml
<CustomObject>
    <description>This Object is to store all the Case Subjects as records, while user creating the case he need to select case subject from lookup.</description>
    <label>Subject Code</label>
    <nameField>
        <label>Localization</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subject Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>