force-app/main/default/objects/CCR_Localization__c/fields/CCR_Active__c.field-meta.xml
<CustomField>
    <fullName>CCR_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the box is ticked, the subject code is being used in the respective country</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>