force-app/main/default/objects/CCR_Localization__c/fields/CCR_L1Code__c.field-meta.xml
<CustomField>
    <fullName>CCR_L1Code__c</fullName>
    <description>Used By: CCR
         Description: to store L1 codes</description>
    <label>L1 Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>