force-app/main/default/objects/CCR_Localization__c/fields/CCR_Language__c.field-meta.xml
<CustomField>
    <fullName>CCR_Language__c</fullName>
    <description>This field is used to filter based on the language of the user.</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_Languages</valueSetName>
    </valueSet>
</CustomField>