force-app/main/default/objects/CCR_Localization__c/fields/CCR_NCPUOM__c.field-meta.xml
<CustomField>
    <fullName>CCR_NCPUOM__c</fullName>
    <description>Non-Conformity Product Quantity for heat sticks</description>
    <label>NCP UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>