force-app/main/default/objects/CCR_Localization__c/fields/CCR_Store__c.field-meta.xml
<CustomField>
    <fullName>CCR_Store__c</fullName>
    <description>This field is used to filter based on the country of the user.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_CountryISOs</valueSetName>
    </valueSet>
</CustomField>