force-app/main/default/objects/CCR_Localization__c/fields/CCR_Title__c.field-meta.xml
<CustomField>
    <fullName>CCR_Title__c</fullName>
    <description>Description of the subject code</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>